devel
-----

* Clean up replication code and remove a 3.2-compatibility mode that was 
  only useful when replicating from a leader < ArangoDB version 3.3.

* Obsolete option `--database.old-system-collections`. This option has no
  meaning in ArangoDB 3.9, as old system collections will not be created 
  anymore in this version. The option was deprecated in 3.8 and announced
  to be obsoleted.

* Upgrade velocypack to latest, C++17-only version.

* Make arangovpack more powerful, by supporting different input and output
  formats (json and vpack, plain or hex-encoded).
  The arangovpack options `--json` and `--pretty` have been removed and have 
  been replaced with separate options for specfiying the input and output 
  types:
  * `--input-type` ("json", "json-hex", "vpack", "vpack-hex")
  * `--output-type` ("json", "json-pretty", "vpack", "vpack-hex")
  The previous option `--print-non-json` has been replaced with the option
  `--fail-on-non-json` which makes arangovpack fail when trying to emit 
  non-JSON types to JSON output.

* Fix undefined behavior in dynarray constructor when running into 
  an out-of-memory exception during construction. In arangod, this can only
  happen during metrics objects construction at program start.

* Added option `--headers-file` to arangoimport, to optionally read CSV/TSV
  headers from a separate file.

* Updated ArangoDB Starter to 0.15.0-preview-3.

* Fixed issue BTS-353: memleak when running into an out-of-memory situation
  while repurposing an existing AqlItemBlock.

* Fix logging of urls when using `--log.level requests=debug`. There was an
  issue since v3.7.7 with the wrong URL being logged in request logging if
  multiple requests were sent over the same connection. In this case, the
  request logging only reported the first URL requested in the connection,
  even for all subsequent requests.

* Deprecate option `--rocksdb.exclusive-writes`, which was meant to serve