@@ -1,2 +1,8 @@
 #define ARANGODB_BUILD_REPOSITORY "@ARANGODB_BUILD_REPOSITORY@"
 #define HAVE_ARANGODB_BUILD_REPOSITORY @HAVE_ARANGODB_BUILD_REPOSITORY@
+
+#define ENTERPRISE_BUILD_REPOSITORY "@ENTERPRISE_BUILD_REPOSITORY@"
+#define HAVE_ENTERPRISE_BUILD_REPOSITORY @HAVE_ENTERPRISE_BUILD_REPOSITORY@
+
+#define OSKAR_BUILD_REPOSITORY "@OSKAR_BUILD_REPOSITORY@"
+#define HAVE_OSKAR_BUILD_REPOSITORY @HAVE_OSKAR_BUILD_REPOSITORY@
