@@ -1,6 +1,9 @@
 devel
 -----
 
+* Added enterprise-build-repository and oskar-build-repository to `--version`
+  as `enterprise-build-repository` and `oskar-build-repository`.
+
 * Clean up replication code and remove a 3.2-compatibility mode that was 
   only useful when replicating from a leader < ArangoDB version 3.3.
 
